tests/baselines/reference/checkJsdocTypeTag7(strict=true).errors.txt
test.js(9,17): error TS7006: Parameter 'optional' implicitly has an 'any' type.


==== test.js (1 errors) ====
    /**
     * @typedef {(a: string, b: number) => void} Foo
     */
    
    class C {
        /** @type {Foo} */
        foo(a, b) {}
    
        /** @type {(optional?) => void} */
                    ~~~~~~~~~
!!! error TS7006: Parameter 'optional' implicitly has an 'any' type.
        methodWithOptionalParameters() {}
    }
    